--- a/stepperForm/style.css
+++ b/stepperForm/style.css
@@ -1,42 +1,126 @@
-body{
+* {
     margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  .master {
+    margin-top: 90px;
+    background-color: #001119;
+  }
+  .form {
+    background-color: rgb(226, 225, 225);
+    padding: 20px 40px;
+    border-radius: 15px;
+    position: relative;
+  }
+  .input-group {
+    background-color: white;
+    margin-top: 12px;
+    border-radius: 5px;
+    width: 400px;
+    border-left: 5px solid rgb(116, 116, 249);
+    padding: 15px 20px;
+    display: flex;
+  }
+  p {
+    margin-left: 12px;
+  }
+  .group-a {
+    border-left: 5px solid rgb(138, 3, 3);
+  }
+  .group-b {
+    border-left: 5px solid orange;
+  }
+  .group-c {
+    border-left: 5px solid green;
+  }
+  .btn {
+    padding: 0.75rem;
+    background-color: #001119;
+    text-decoration: none;
+    display: block;
+    color: white;
+    text-align: center;
+    border-radius: 5px;
+    margin-top: 12px;
+  }
+  .btns-group {
     display: grid;
-    place-items: center;
-    min-height: 100vh;
-}
-.form{
-    width: clamp(320px, 30%, 430px);
-    margin: 0 auto;
-    border: 1px solid #ccc;
-    border-radius: 0.35rem;
-    padding: 1.5rem;
-}
-
-input{
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+  }
+  .wid {
+    height: 40px;
+    outline: none;
+    margin-top: 5px;
+    padding: 5px;
+  }
+  .form-step {
+    display: none;
+  }
+  .form-step-active {
     display: block;
-}
-
-.width-50{
-    width: 50%;
-}
-
-.ml-auto{
-    margin-left: auto;
-}
-
-
-
-.continue-button {
-    display: block;
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #007bff;
+  }
+  .progressbar {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    counter-reset: step;
+  }
+  
+  .progressbar::before,
+  .progress {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 5px;
+    background-color: black;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  
+  .progress {
+    background-color: white;
+    width: 0%;
+  }
+  .progress-step {
+    width: 2.1875rem;
+    background-color: rgb(255, 255, 255);
+    height: 2.1875rem;
+    border-radius: 50%;
+    border: 2px solid black;
+    display: flex;
+    justify-content: center;
+    z-index: 1000;
+    align-items: center;
+  }
+  .progress-step::before {
+    counter-increment: step;
+    content: counter(step);
+    z-index: 1000;
+  }
+  .progress-step::after {
+    content: attr(data-title);
+    color: black;
+    font-weight: 100;
+    font-size: 12px;
+    position: absolute;
+    top: calc(100% + 0.75rem);
+  }
+  .progress-step-active {
+    background-color: #008000;
     color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-}
-
-.btn:hover{
-    box-shadow: 0 0 0 2px #fff,0 0 0 3px #007bff;
-}
+    font-weight: bold;
+  }
+  @media (max-width: 600px) {
+    .master {
+      width: 100%;
+      padding: 15px;
+    }
+    .input-group {
+      width: 100%;
+    }
+    .ext {
+      height: 180px;
+    }
+  }
